@@ -82,7 +82,7 @@ gdb_test_multiple "" "stop threads 1" {
 set cmd "info threads"
 set ok 0
 gdb_test_multiple $cmd $cmd {
-    -re " 1 Thread " {
+    -re " 1 *Thread " {
 	set ok 1
 	exp_continue
     }
