@@ -214,7 +214,7 @@ gdb_test "continue" ".*Breakpoint 3.*still alive.*" "continue to synch point"
 set no_of_threads 0
 send_gdb "info thread\n"
 gdb_expect {
-	-re "^info thread\[ \t\r\n\]+(\[0-9\]+) Thread.*$gdb_prompt $" {
+    -re "^info thread\[ \t\r\n\]+ *Id .*Frame\[ \t\r\n\]|(\[0-9\]+) *Thread.*$gdb_prompt $" {
 	   set no_of_threads $expect_out(1,string)
 	   pass "get number of threads"
         }
@@ -262,10 +262,10 @@ gdb_test "continue" ".*Breakpoint 4.*before exit.*" "threads exited"
 
 send_gdb "info thread\n" 
 gdb_expect {
-    -re ".* 1 Thread.*2 Thread.*$gdb_prompt $" {
+    -re ".* 1 *Thread.*2 *Thread.*$gdb_prompt $" {
         fail "Too many threads left at end"
     }
-    -re ".*\\\* 1 Thread.*main.*$gdb_prompt $" {
+    -re ".*\\\* 1 *Thread.*main.*$gdb_prompt $" {
         pass "Expect only base thread at end"
     }
     -re ".*No stack.*$gdb_prompt $" {
